--- a/src/InfoWoto.ServicoNotaAlunos.IOC/InfoWoto.ServicoNotaAlunos.IOC.csproj
+++ b/src/InfoWoto.ServicoNotaAlunos.IOC/InfoWoto.ServicoNotaAlunos.IOC.csproj
@@ -1,5 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\InfoWoto.ServicoNotaAlunos.Domain\InfoWoto.ServicoNotaAlunos.Domain.csproj" />
+    <ProjectReference Include="..\InfoWoto.ServicoNotaAlunos.Application\InfoWoto.ServicoNotaAlunos.Application.csproj" />
+    <ProjectReference Include="..\InfoWoto.ServicoNotaAlunos.Data\InfoWoto.ServicoNotaAlunos.Data.csproj" />
+    <ProjectReference Include="..\InfoWoto.ServicoNotaAlunos.MessageBus\InfoWoto.ServicoNotaAlunos.MessageBus.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
